--- a/views/admin_layuots/products.ejs
+++ b/views/admin_layuots/products.ejs
@@ -17,6 +17,7 @@
                 <th>Category</th>
                 <th>Stock</th>
                 <th>Article</th>
+                <th>Image</th>
                 <th>Edit</th>
                 <th>Delete</th>
             </tr>
