--- a/views/user_layuots/start_page.ejs
+++ b/views/user_layuots/start_page.ejs
@@ -5,13 +5,13 @@
                     <div class="banner__carousel">
                         <!-- заполнить ссылки в карусели -->
                         <div class="carousel-item">
-                            <a href="#" class="carousel__link">
+                            <a href="/catalog/men" class="carousel__link">
                                 <img src="/img/photos/sex__men.jpeg" style="width:100%" alt="">
                                 <div class="carousel-text">Мужское</div>
                             </a>
                         </div>
                         <div class="carousel-item">
-                            <a href="#" class="carousel__link">
+                            <a href="/catalog/women" class="carousel__link">
                                 <img src="/img/photos/sex__women.jpeg" style="width:100%" alt="">
                                 <div class="carousel-text">Женское</div>
                             </a>
@@ -20,11 +20,11 @@
                         <a class="next" onclick="addSlide(1)">&#10095</a>
                     </div>
                     <div class="banner__blocks">
-                        <a href="#" class="blocks-item men__link">
-                            <div class="blocks-text">Мужское</div>
+                        <a href="/catalog/brands/caterpillar" class="blocks-item cat__link">
+                            <div class="blocks-text">Обувь бренда Caterpillar</div>
                         </a>
-                        <a href="#" class="blocks-item women__link">
-                            <div class="blocks-text">Женское</div>
+                        <a href="/catalog/brands/nike" class="blocks-item nike__link">
+                            <div class="blocks-text">Обувь бренда Nike</div>
                         </a>
                     </div>
                 </div>
@@ -37,11 +37,11 @@
                 <div class="main__banner">
                     <div class="banner__blocks__second">
                         <!-- изменить класс ссылок и добавить картинки -->
-                        <a href="#" class="blocks-item men__link">
-                            <div class="blocks-text">Мужское</div>
+                        <a href="/catalog/categories/botinki" class="blocks-item boots__link">
+                            <div class="blocks-text">Ботинки</div>
                         </a>
-                        <a href="#" class="blocks-item women__link">
-                            <div class="blocks-text">Женское</div>
+                        <a href="/catalog/categories/kedy" class="blocks-item sneakers__link">
+                            <div class="blocks-text">Кеды</div>
                         </a>
                     </div>
                     <div class="banner__carousel">
