--- a/public/user_css/header.css
+++ b/public/user_css/header.css
@@ -15,13 +15,97 @@
     font-family: "UbuntuMono", sans-serif;
 }
 
+.overlay {
+   
+    /* Скрываем подложку  */
+    opacity: 0;
+    visibility: hidden;
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 20;
+    transition: .3s all;
+ }
+ 
+ 
+ /* Стили для модальных окон */
+ 
+ .modal {
+    
+    /* Скрываем окна  */
+    opacity: 0;
+    visibility: hidden;
+    
+    
+    /*  Установаем ширину окна  */
+    width: 100%;
+    max-width: 500px;
+    
+    /*  Центрируем и задаем z-index */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 30; /* Должен быть выше чем у подложки*/
+    
+    /*  Побочные стили   */
+    box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2); 
+    text-align: center;
+    padding: 30px;
+    border-radius: 3px;
+    background-color: #fff;
+    transition: 0.3s all;
+ }
+ 
+ 
+ /* Стили для активных классов подложки и окна */
+ 
+ .modal.active,
+ .overlay.active{
+    opacity: 1;
+    visibility: visible;
+ }
+ 
+ 
+ /* Стили для кнопки закрытия */
+ 
+ .modal__cross {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    fill: #444;
+    cursor: pointer;
+ }
 
-/* the highest part of header */
+.modal__header,
+.modal__field{
+    padding:6px 12px;
+    text-transform:capitalize;
+}
+
+.modal__header{
+    font-weight: 800;
+    font-size: 20px;
+}
+
+.modal__field-img {
+    width:50px;
+    height: 50px;
+    object-fit: contain;
+}
+
+/* Верхняя часть навигации */
 .top__header{
     background-color:#000;
     height:30px;
 }
-/* !!!!!!!!!! styles for both containers */
+/* Стили для контейнеров  */
 .top__container,
 .bottom__container {
     padding-top: 2px;
@@ -31,7 +115,7 @@
     flex-direction: row;
     justify-content: space-between;
 }
-/* styles for info */
+/* Стили для блока инфо */
 .info__nav {
     display: flex;
     flex-direction: row;
@@ -41,10 +125,11 @@
     margin-right: 16px;
     list-style: none;
 }
-/* styles for links in header&footer */
+/* Стили для ссылок */
 .item-link{
     text-decoration: none;
     color:#000;
+    transition: .4s;
 }
 
 .fff{
@@ -54,17 +139,19 @@
 .item-link:hover{
     text-decoration: none;
     color:#f7753e;
-    transition: 0.4s;
+    transition: .4s;
 }
-/* styles for telephone */
+/* Стили для иконок телефона */
 .phone{
     text-decoration: none;
     color:#fff;
+    transition: .4s;
 }
 
 .phone:hover{
     color:#f7753e;
     text-decoration: none;
+    transition: .4s;
 }
 
 .phone-icon{
@@ -73,7 +160,7 @@
 
 
 
-/* styles for navbar */
+/* Стили для навигации */
 
 .bottom__header{
     background-color:#fffde8;
@@ -82,7 +169,7 @@
 }
 
 
-/* logo */
+/* Лого */
 
 
 .logo-link{
@@ -92,16 +179,17 @@
     text-transform: uppercase;
     color:#000;
     text-decoration: none;
+    transition: .4s;
 }
 
 .logo-link:hover{
     color:#f7753e;
     text-decoration: none;
-    transition: 0.5s;
+    transition: .4s;
 }
 
 
-/* categories */
+/* Категории */
 
 
 .container__navbar{
@@ -135,15 +223,39 @@
     justify-content: flex-end;
 }
 
-.IUser__cart{
+.User__cart{
     margin-right: 16px;
 }
 
-.interface-icon{
-    width:30px;
+.interface-icon-cart{
+    width:37px;
 }
 
-.interface-icon:hover{
-    transform: scale(1.1);
-    cursor: pointer;
+.interface-icon-user{
+    width:35px;
+}
+
+/* Стили для кол-ва товаров */
+.User__cart__link {
+    display: flex;
+}
+
+.sphere {
+    margin-top: 18px;
+    margin-left: 18px;
+    position: absolute;
+    z-index: 2;
+    content: "";
+    border-radius: 50%;
+    border:9px solid #f7753e;
+    background-color: #f7753e;
+}
+
+.count {
+    margin-top: 18px;
+    margin-left: 22px;
+    position: absolute;
+    z-index: 3;
+    font-size: 14px;
+    color: #000;
 }
