--- a/public/user_css/part_product.css
+++ b/public/user_css/part_product.css
@@ -141,7 +141,9 @@ main {
 
 .product__addtocart{
     width:100%;
-    height:3rem;
+    padding:1rem 0rem;
+    text-align: center;
+    text-decoration: none;
     font-size:16px;
     color: #f2f2f2;
     background-color: #000;
@@ -150,6 +152,7 @@ main {
 }
 
 .product__addtocart:hover{
+    text-decoration: none;
     color:#fff;
     cursor: pointer;
     box-shadow: 3px 3px 3px gray;
@@ -158,7 +161,7 @@ main {
 
 .product__addtocart__locked{
     width:100%;
-    padding:1rem;
+    padding:1rem 0rem;
     font-size:16px;
     text-align: center;
     color: #f2f2f2;
