--- a/views/admin_layuots/header.ejs
+++ b/views/admin_layuots/header.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AdminArea</title>
     <link rel="stylesheet" href="/admin_css/header_style.css">
     <link rel="stylesheet" href="/admin_css/footer_style.css">
     <link rel="stylesheet" href="/admin_css/body_style.css">
