--- a/views/user_layuots/brand.ejs
+++ b/views/user_layuots/brand.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Men</title>   
+    <title>Catalog</title>   
     <link rel="stylesheet" href="/user_css/header.css">
     <link rel="stylesheet" href="/user_css/footer.css">
     <link rel="stylesheet" href="/user_css/part_catalog.css">
@@ -18,7 +18,6 @@
             </div>
             <div class="catalog__products">
                 <% products.forEach(product => { %>
-                    <% if (product.brand == cond) { %>
                         <a href="/catalog/product/<%= product._id %>" class="product__link">
                             <div class="product__image"><img class="image-pic" src="/product_images/<%= product._id %>/<%= product.image %>" alt="Обувь"></div>
                             <div class="product__info">
@@ -30,7 +29,6 @@
                                 </div>
                             </div>
                         </a>
-                    <% } %>
                 <% }) %>
             </div>
         </div>
